# LangChainAgentProject

./: README.md  main_10_mongo_vector_search.py  main_11_memory_example.py  main_1summerization.py  main_2summerization_with_local_ollama.py  main_3tool_call.py  main_4tool_call_tavily.py  main_5simple_tavily.py  main_6job_search_example.py  main_7langgraph_react_agent.py  main_8chromadb_rag.py  main_9real_chromadb.py  pyproject.toml
chroma_db/: chroma.sqlite3
